[package]
name = "bootloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = { version = "0.26.0", features = ["alloc"] }
uefi-services = "0.23.0"
elf = { version = "0.7.4", default-features = false }
common = { path = "../common" }